Remove google.appengine imports. Make stashboard.contrib part of requirements.txt file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ sphinx
 git+git://github.com/kyleconroy/webtest.git
 git+git://github.com/kyleconroy/python-oauth2.git
 simplejson
+dateutil
+httplib2
+python-oauth2
