Update for distribution on pypi.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-requests==0.7.4
-mock==0.7.2
-nose==1.1.2
-sphinx
-git+git://github.com/kyleconroy/webtest.git
-git+git://github.com/kyleconroy/python-oauth2.git
-simplejson
-python-dateutil
-httplib2
-python-oauth2
+Django>=1.7,<1.8
+django-uuidfield==0.5.0
+djangorestframework>=2.4,<2.5
 pytz
-djangorestframework
-markdown
-django-filter
-django-uuidfield
-django-guardian
